--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Nicholas' Portfolio</title>
+    <style>
+      h1 {
+        font-family: Optima, Sans-Serif;
+        font-size: 32px;
+        text-align: center;
+        text-decoration: underline;
+      }
+      h2 {
+        font-family: Optima, Sans-Serif;
+        font-size: 28px;
+        color: #5C6AC4;
+      }
+      p {
+        font-family: Gill-Sans, Sans-Serif;
+      }
+    </style>
+  </head>
+  <body>
+      <h1 class="title">Nicholas Chan's Portfolio </h1>
+      <h2> Summary </h2>
+      <p> Hi.</p>
+  </body>
+</html>
