--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Nicholas' Portfolio</title>
     <style>
       h1 {
+        margin-top: 4rem;
         font-family: Optima, Sans-Serif;
         font-size: 32px;
         text-align: center;
@@ -53,13 +54,15 @@
     </style>
     
   </head>
+  <header style="position: fixed; top: 0rem; width: 100%;" >
+    <ul class="horizontal-list">
+    <li><a href="#Home"> Home </a></li>
+    <li><a href="#Projects">Projects</a></li>
+    <li><a href="#Volunteering">Volunteering</a></li>
+    <li><a href="#Contact">Contact</a></li>
+    </ul>
+  </header>
   <body>
-      <ul class="horizontal-list">
-        <li><a href="#Home"> Home </a></li>
-        <li>Projects</li>
-        <li>About Us</li>
-        <li>Contact</li>
-      </ul>
       <h1 class="title">Nicholas Chan's Portfolio </h1>
       <h2> Summary </h2>
       <p> Hi.</p>
