--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         color: #5C6AC4;
       }
       p {
-        font-family: Gill-Sans, Sans-Serif;
+        font-family: Optima, Sans-Serif;
+        text-align: left;
+        
       }
       ul.horizontal-list {
         list-style: none;
@@ -65,7 +67,14 @@
   <body>
       <h1 class="title">Nicholas Chan's Portfolio </h1>
       <h2> Summary </h2>
-      <p> Hi.</p>
+      <p> Nicholas recently graduated from the University of British Columbia in the Electrical Engineering program.
+          Having spent most of his life in Vancouver, he is familiar with the city and the abundance of design innovation. 
+          With his experience as an electrical designer, he is familiar with the construction design process and drafting electrical drawings. 
+          Nicholas is very passionate about sustainability and renewable energy. In his studies,  
+          he has honed his knowledge of power systems and renewable technologies while also challenging himself with courses in deep learning, semiconductors,
+          and power electronics to understand the technology which powers our world. </p> 
+      <p> Nicholas hopes to bring his collaborative and hard-working attitude to the workplace with like-minded and forward-thinking peers
+          as the world continues to electrify. </p>
       <div align="center">
         <img src="assets/Tacobunny.png" alt="Bunny with hardshell taco body"  ></img> 
       </div>
