--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         font-size: 28px;
         color: #5C6AC4;
       }
+      h3{
+        text-align: center;
+        font-family: Times New Roman;
+        font-size: 12px;
+      }
       p {
         font-family: Optima, Sans-Serif;
         text-align: left;
@@ -78,6 +83,6 @@
       <div align="center">
         <img src="assets/Tacobunny.png" alt="Bunny with hardshell taco body"  ></img> 
       </div>
-     
+      <h3> All code, written text, images, and videos on my portfolio were created without assistance of generative artificial intelligence. </h3>
   </body>
 </html>
