--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,13 @@
   </header>
   <body>
       <h1> Contact Nicholas </h1>
-      <p>page1</p>
+      <div id="boxDIV" style="top: 10%; margin-left: 10%; float: left;">
+        <pb><a href="mailto:nicholaschan0224@gmail.com;">E-Mail</a></pb>
+      </div>
+      <div id="boxDIV" style="top: 20%; margin-right: 10%; float: right;">
+        <pb><a href="https://www.linkedin.com/in/nicholaschan24"> LinkedIn</a></pb>
+      </div>
+      <p style="position:fixed; top: 30%; width: 100%; text-align: center;">Thank you for taking a look at my portfolio page! I'll respond to any messages as soon as I can.</p>
+      <h3 class="footer"> All code, written text, images, and videos on my portfolio were created without assistance of generative artificial intelligence. </h3>
   </body>
 </html>  
