--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>Nicholas' Portfolio</title>
-  </head>
     <link rel="stylesheet" href="styles.css">
+  </head>
     <header style="position: fixed; top: 0rem; width: 100%;" >
-     <ul class="horizontal-list">
-      <li><a href="index.html"> Home </a></li>
-      <li><a href="#Projects">Projects</a></li>
-      <li><a href="#Volunteering">Volunteering</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <ul class="horizontal-list">
+        <li><a href="index.html"> Home </a></li>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#Volunteering">Volunteering</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </header>
   <body>
@@ -26,6 +25,6 @@
       <div align="center">
         <img src="assets/Tacobunny.png" alt="Bunny with hardshell taco body"  ></img> 
       </div>
-      <h3> All code, written text, images, and videos on my portfolio were created without assistance of generative artificial intelligence. </h3>
+      <h3 class="footer"> All code, written text, images, and videos on my portfolio were created without assistance of generative artificial intelligence. </h3>
   </body>
 </html>
