--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <header style="position: fixed; top: 0rem; width: 100%;" >
       <ul class="horizontal-list">
         <li><a href="index.html"> Home </a></li>
-        <li><a href="#Projects">Projects</a></li>
-        <li><a href="#Volunteering">Volunteering</a></li>
+        <li><a href="project.html">Projects</a></li>
+        <li><a href="volunteer.html">Volunteering</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </header>
