--- a/project.html
+++ b/project.html
@@ -6,13 +6,26 @@
         <header style="position: fixed; top: 0rem; width: 100%;" >
             <ul class="horizontal-list">
                 <li><a href="index.html"> Home </a></li>
-                <li><a href="#Projects">Projects</a></li>
-                <li><a href="#Volunteering">Volunteering</a></li>
+                <li><a href="project.html">Projects</a></li>
+                <li><a href="volunteer.html">Volunteering</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </header>
     </head>
     <body>
         <h1> Projects </h1>
+        <p style="text-align: center;">
+            Here I have some more details on the projects that I've had a part in!  
+        </p>
+        <table class="centerTable">
+            <tr>
+                <th> Project Name </th>
+                <th> Project Type </th>
+            </tr>
+            <tr>
+                <td> Project 1 </td>
+                <td> Electronics </td>
+            </tr>
+        </table>
     </body>
 </html>
